--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "discord.js": "^12.5.3",
     "express": "^4.17.1",
     "jimp": "^0.16.1",
-    "ms": "^2.1.3"
+    "moment": "^2.29.1",
+    "ms": "^2.1.3",
+    "steam-provider": "^0.3.2"
   }
 }
